Fix bios and layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,7 @@ body.is-playing #main .escucha .on-air span {
 #main .bio-container {
   position: relative;
   top: 20px;
+  left: 120px;
 }
 
 #main .bio-container a.close {
@@ -380,7 +381,7 @@ body.is-playing #main .escucha .on-air span {
 }
 
 #main .bio-container #bio {
-  width: 420px;
+  width: 520px;
   max-width: 100%;
   margin: 0 auto;
   font-size: 12px;
@@ -463,7 +464,7 @@ body.is-playing #main .escucha .on-air span {
 #main .programacion .calendario > div {
   float: left;
   position: relative;
-  width: 180px;
+  width: 225px;
 }
 #main .programacion .calendario > div h2 {
   padding: 20px;
